tests/NormalTests/paczka1/fuzzy1/64779507.err
Error in line 2: A25yn A2Ð5 58,7
Error in line 4: WKGEa55w S325 97,2
Error in line 8: A205 S325 15,3
Error in line 12: ljpF39GQd A28 67,2
Error in line 26: A205 A205 13,99
Error in line 10: A205 A515 88,5
Error in line 30: Enznk2S3k1d S325 75,3
Error in line 33: Enznk2S3k1d A28 -1,0
Error in line 25: X8u2nt9xR A515 21,5
Error in line 20: WKGEa55w A28 248,1
